custom.css
/* ... */
.highcharts-tick {
    stroke: var(--main-bg-color);
}

.highcharts-yaxis .highcharts-tick {
    display: none;
}

/* Charts - Export button/menu */
.highcharts-button-box {
    fill: var(--main-item-bg-color);
}

.highcharts-button-symbol {
    stroke: var(--secondary-text-color) !important;
}

.highcharts-contextbutton:hover {
    cursor: pointer;
}

.highcharts-menu {
    background: var(--main-bg-color) !important;
}

.highcharts-menu-item:hover {
    background: var(--main-text-color) !important;
    color: var(--main-bg-color) !important;
}

/* Setup */
input#AcceptNewHardware:checked ~ button {
    display: none
}

.allow5min,
.allow5min:hover {
    background: none;
    background-color: var(--main-blue-color);
    color: #fff;
    border-radius: 2px;
    border: none;
}

.ui-corner-all {
    background: none;
    border-radius: 0;
    border: none;
    border-bottom: 1px solid var(--main-blue-color);
    color: var(--secondary-text-color);
    font-family: main-font;
    outline: none;
}

textarea {
	border-radius: 2px !important;
	border: 1px solid var(--main-blue-color) !important;
}

select.ui-corner-all option {
    background: var(--main-navbar-bg-color);
}

/* =Setup */
/* Footer */
/* =Footer */
/* Popups */

.list-group-item, .list-group-item:link {
    background: var(--main-bg-color);
    color: var(--main-text-color);
}

#offline {
    background: linear-gradient(to right, #0bcdc7 0%, #0b97cd 100%) !important;
}

#offline h3 {
    color: #fff !important;
}

#offline h3:after, #offline h3:before,#offline:after, #offline:before {
    display: none;
}

/* =Popus */
.ui-dialog-buttonset .ui-button-text {
    color: #fff;
}

.ui-widget-header {
    color: var(--secondary-text-color);
}

.btnsmall,.btnsmall-sel {
    display: block;
    background: none;
}

.item.fadeOff {
    opacity: 0.5;
}
/*  Device is timeout  */
.item.statusTimeout {
    box-shadow: 0px 0px 10px 2px rgb(199,67,67,0.5);
    opacity: 0.5;
	/*! background-color: transparent !important; */
}

.item.statusTimeout tr:hover {
    box-shadow: 0px 0px 0px 2px rgb(199,67,67) !important;
}
/* Switch is protected */
.item.statusProtected tr {
    box-shadow: 0px 0px 10px 2px rgb(0, 0, 139, 0.4) !important;
}
.item.statusProtected tr:hover {
    box-shadow: 0px 0px 10px 2px rgb(0, 0, 139, 0.4) !important;
}

/* Device has low battery */
.item.statusLowBattery tr {
    box-shadow: 0px 0px 10px 2px rgb(255,255,0,0.4) !important;
}

.item.statusLowBattery tr:hover {
    box-shadow: 0px 0px 0px 2px rgb(255,255,0) !important;
}

.blink {
    animation: blinker 2s linear infinite;
}

@keyframes blinker {
    50% {
        opacity: 0;
    }
}
/* Watermarks */
/* Media Queries */

@media (min-width: 768px) {
    .navbar .brand {
        left: auto;
        margin-left: 90px;
        transform: translateX(0);
    }
}
#login:before {
    background: linear-gradient(to right, #0bcdc7 0%, #0b96cd 100%);
    text-align: center;
    vertical-align: middle;
    background-size: 100% 75px;
    background-repeat: no-repeat;
    border: none !important;
	border-radius: 6px !important;
    top: 0% !important;
    bottom: 0% !important;
    left: 0% !important;
    right: 0% !important;
    padding-top: 15px;
	content: url(images/logo.png) !important;
}

#login h1:after, #login h1:before {
    content: none !important;
}


#login {
    width: 450px;
    height: auto !important;
/*     margin: auto;
    position: relative; */
	padding: 90px 30px 30px 30px !important;
	background: #fff;
    border: 1.5px solid;
    border-color: transparent;
    border-radius: 6px !important;
    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
}

#login h1 {
	color:#fff !important;
	font: bold 26px/1 Verdana, Helvetica !important;
	display: none
}

#login input[type="checkbox"] {
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearance: none;
    height: 14px;
    width: 14px;
    margin-right: 8px;
    position: relative;
    background: #fff;
    border: 1px solid #0b96cd;
    outline: none;
}
#login input[type="checkbox"]:checked::before {
    background: #0b96cd;
    content: "";
    position: absolute;
    top: 2px;
    left: 2px;
    width: 8px;
    height: 8px;
}

#login a {
    display: none
}

#login #inputs input[type=text], #login #inputs input[type=password] {
    border: none;
    border-radius: none !important;
    box-shadow: none !important;
    background: #f1f1f1;
    border-bottom: 1px solid #ccc;
    color: #1a1a1a;
}

#login #inputs input[type=text]:focus, #login #inputs input[type=password]:focus {
    border-bottom: 1px solid #0b96cd;
    color: #1a1a1a;
}

#login fieldset {
    font-family: main-font;
    margin: auto !important;
    width: 25%;
}

#login {
    background-image: none !important;
    background-color: #ffffff !important;
}

#login #submit {
    background-image: none;
    background-color: #0b96cd;
    color: #fff;
    border: none;
    text-shadow: none;
    border-radius: 2px;
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
}

.btn-group .btn {
    margin: 0 0 0 -1px !important;
    text-shadow: none !important;
    color: var(--main-text-color);
    font-family: main-font;
    border: none !important;
}

.btn-group > .btn:first-child,
.btn-group > .btn:last-child {
    margin-left: 0 !important;
    border-radius: 0px !important;
}

.btn-default,
.btn-group .btn-default {
    background: var(--main-item-bg-color) !important;
    border-color: var(--main-blue-color) !important;
    color: var(--main-blue-color) !important;
    text-shadow: none;
}

.btn.btn-selected,
.btn-group .btn-selected,
.btn-default.active,
.btn-group .btn-default.active {
    color: var(--main-text-color) !important;
    background: transparent !important;
    border-color: transparent !important;
    font-family: main-font-bold;
}
/* ... */

